prevent sdk threading crash

--- a/audioswitch/build.gradle
+++ b/audioswitch/build.gradle
@@ -104,7 +104,7 @@ artifactory {
             publishPom = true
         }
     }
-    clientConfig.info.setBuildNumber(getShortCommitSha())
+//    clientConfig.info.setBuildNumber(getShortCommitSha())
 }
 
 /*
